[package]
name = "crucial"
description = "◉ Ordinal wallet and block explorer"
version = "0.0.0"
edition = "2021"
license = "CC0-1.0"
autotests = false
homepage = "https://github.com/raphjaph/crucial"
repository = "https://github.com/raphjaph/crucial"
autobins = false
rust-version = "1.77"

[dependencies]
